--- a/.github/workflows/piquaf.yaml
+++ b/.github/workflows/piquaf.yaml
@@ -1,13 +1,32 @@
-name: piquaf-pylint-pytest
-run-name: ${{ github.actor }} is Linting and testing
+name: Piquaf-workflow
+
 on: [push]
+
 jobs:
-  run-pylint:
-    runs-on: ubuntu-latest
+  build:
+
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
+
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          node-version: '14'
-      - run: pip install requirements.txt
-      - run: pylint .\piquaf\
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with ruff
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          ruff --format=github --select=E9,F63,F7,F82 --target-version=py37 .
+          # default set of ruff rules with GitHub Annotations
+          ruff --format=github --target-version=py37 .
+      - name: Test with pytest
+        run: |
+          pytest
