--- a/.github/workflows/piquaf.yaml
+++ b/.github/workflows/piquaf.yaml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.10", "3.11"]
@@ -18,6 +18,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          sudo apt-get texlive
           python -m pip install --upgrade pip
           pip install ruff pytest
           pip install -r requirements.txt
