--- a/.github/workflows/piquaf.yaml
+++ b/.github/workflows/piquaf.yaml
@@ -18,7 +18,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          choco install texlive
+          choco install manim-latex
           python -m pip install --upgrade pip
           pip install ruff pytest
           pip install -r requirements.txt
